--- a/app/src/main/res/layout/record_list.xml
+++ b/app/src/main/res/layout/record_list.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content" android:id="@+id/sendToAI"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/delete"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.234"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginBottom="24dp" android:layout_marginLeft="48dp" android:layout_marginStart="48dp"/>
     <Button
             android:text="    Delete    "
             android:layout_width="wrap_content"
